continue to tighten up logic and messaging for posting scores, ensure that flashed error messages are properly formatted

--- a/templates/app.html
+++ b/templates/app.html
@@ -203,7 +203,7 @@
        $('.err_dlg')[0].close();
      });
      const show_error = function(err_text) {
-       $('.err_dlg div').text(err_text);
+       $('.err_dlg div').html(err_text);
        $('.err_dlg')[0].showModal();
      };
 
