--- a/templates/tourn.html
+++ b/templates/tourn.html
@@ -229,7 +229,7 @@
        $('.err_dlg')[0].close();
      });
      const show_error = function(err_text) {
-       $('.err_dlg div').text(err_text);
+       $('.err_dlg div').html(err_text);
        $('.err_dlg')[0].showModal();
      };
 
