--- a/templates/dash.html
+++ b/templates/dash.html
@@ -4,53 +4,44 @@
     <title>{{title}}</title>
 
     <style>
-     .red_bg {
-       background-color: #FFECEC;
+     main {
+       width: max-content;
      }
-     .grn_bg {
-       background-color: #E1FFDC;
+     section + section {
+       margin-top: 1.0rem;
      }
-     .red_fg {
-       color: #D70000;
+     h1 {
+       display: inline-block;
+       font-size: 1.75rem;
+       margin-bottom: 1.0rem;
      }
-     .grn_fg {
-       color: #108810;
+     h2 {
+       display: inline-block;
+       font-size: 1.375rem;
+       margin-top: 1.0rem;
+       margin-bottom: 0.5rem;
+     }
+     h2:first-child {
+       margin-top: 0.5rem;
      }
      .updated {
        display: block;
        float: right;
+       margin-top: 1.0rem;
      }
-     button {
+     .updated button {
        margin-left: 0.8rem;
        padding: 0.2rem 0.8rem;
      }
-     button[value="pause_upd"] {
+     .updated button[value="pause_upd"] {
        display: inline;
      }
-     button[value="resume_upd"],
-     button[value="restart_upd"] {
+     .updated button[value="resume_upd"],
+     .updated button[value="restart_upd"] {
        display: none;
      }
-     .container {
-       display: inline-block;
-       margin-top: 1.0rem;
-       overflow-x: auto;
-       white-space: nowrap;
-     }
-     .container_lbl {
-       font-size: x-large;
-       font-weight: bold;
-     }
-     .section {
-       margin-top: 2.0rem;
-       margin-bottom: 2.0rem;
-     }
-     .section_lbl {
-       font-size: large;
-       font-weight: bold;
-     }
      table {
-       margin-top: 1.5rem;
+       margin-top: 1.0rem;
        border: 2px solid darkgrey;
        border-collapse: collapse;
      }
@@ -83,12 +74,24 @@
      u {
        text-decoration: solid underline 1px;
      }
+     .red_bg {
+       background-color: #FFECEC;
+     }
+     .grn_bg {
+       background-color: #E1FFDC;
+     }
+     .red_fg {
+       color: #D70000;
+     }
+     .grn_fg {
+       color: #108810;
+     }
     </style>
   </head>
 
   <body>
-    <div class="container">
-      <span class="container_lbl">{{tourn.name}} &ndash; {{title}}</span>
+    <main>
+      <h1>{{tourn.name}} &ndash; {{title}}</h1>
       <input class="start" type="hidden" name="start" value="">
       <span class="updated">
         Updated: {{updated}} (<span class="elapsed">0 secs ago</span>)
@@ -98,7 +101,7 @@
       </span>
 
       {% if dash_num == 0 %}
-      <div class="section sd_scores">
+      <section class="sd_scores">
         <table>
           <thead>
             <tr>
@@ -148,13 +151,13 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>
+      </section>
       {% endif %}  {# dash_num == 0 #}
 
       {% if dash_num == 1 %}
       {% for div in div_list %}
-      <div class="section rr_scores">
-        <span class="section_lbl">Division {{div}}</span>
+      <section class="rr_scores">
+        <h2>Division {{div}}</h2>
         <table>
           <thead>
             <tr>
@@ -209,10 +212,10 @@
             {% endfor %}
           </tbody>
         </table>
-      </div>
+      </section>
       {% endfor %}
       {% endif %}  {# dash_num == 1 #}
-    </div>
+    </main>
   </body>
 
   <script src="/static/jquery-3.7.1.min.js"></script>
@@ -231,7 +234,7 @@
      };
 
      function startElapsed() {
-       const $start = $(".start");
+       const $start = $("input.start");
        if (!$start.val()) {
          $start.val(Math.round(Date.now() / 1000.0));
        }
