add partner picks dashboard, auto script for partner pick demos
need to add highlight to changes for an update cycle

--- a/templates/app.html
+++ b/templates/app.html
@@ -4,6 +4,10 @@
     <title>{{title}}</title>
 
     <style>
+     body {
+       width: max-content;
+       min-width: 65rem;
+     }
      form {
        overflow: hidden;
      }
