--- a/templates/report.html
+++ b/templates/report.html
@@ -10,27 +10,21 @@
      .loser {
        color: #D70000;
      }
-     .no_table {
-       margin-top: 1.0rem;
-       display: block;
-       font-size: 1.125rem;
-       font-style: italic;
-     }
      .division {
-       margin-top: 1.0rem;
-       margin-bottom: 0.5rem;
+       margin-top: 0.0rem;
+       margin-bottom: 0.0rem;
        display: flex;
        flex-direction: column;
      }
      .cohort {
        padding-left: 1.5rem;
-       margin-top: 0.75rem;
-       margin-bottom: 0.5rem;
+       margin-top: 0.0rem;
+       margin-bottom: 0.0rem;
        display: flex;
        flex-direction: column;
      }
      .cohort > p {
-       font-size: 1.25rem;
+       font-size: 1.125rem;
        margin-top: 0.5rem;
        margin-bottom: 0.0rem;
      }
@@ -39,44 +33,52 @@
      }
      .cohort ul {
        list-style: square outside none;
-       font-size: 1.25rem;
+       font-size: 1.125rem;
        margin-top: 0.25rem;
        margin-bottom: 0.0rem;
      }
      .team {
        padding-left: 1.5rem;
-       margin-top: 0.75rem;
-       margin-bottom: 0.5rem;
+       margin-top: 0.5rem;
+       /*margin-bottom: 0.5rem;*/
      }
      .team > p > span {
        margin-right: 1.0rem;
        font-weight: bold;
      }
      h1 {
-       font-size: 2.0rem;
-       margin-block-start: 1.0rem;
-       margin-block-end: 0.0rem;
+       font-size: 1.75rem;
+       margin-top: 0.5rem;
+       margin-bottom: 0.5rem;
      }
      h2 {
-       font-size: 1.75rem;
-       margin-block-start: 1.0rem;
-       margin-block-end: 0.0rem;
+       font-size: 1.5rem;
+       margin-top: 1.75rem;
+       margin-bottom: 0.5rem;
+     }
+     .division:first-of-type h2 {
+       margin-top: 0.75rem;
      }
      h3 {
-       font-size: 1.5rem;
-       margin-block-start: 0.75rem;
-       margin-block-end: 0.5rem;
        display: inline-block;
+       font-size: 1.375rem;
+       margin-top: 1.0rem;
+       margin-bottom: 0.375rem;
+     }
+     .cohort:first-of-type h3 {
+       margin-top: 0.5rem;
      }
      .h3_info {
-       font-size: 1.25rem;
+       font-size: 1.125rem;
        font-weight: normal;
      }
      h4 {
-       font-size: 1.25rem;
-       margin-block-start: 0.75rem;
-       margin-block-end: 0.5rem;
-       /*display: inline-block;*/
+       font-size: 1.125rem;
+       margin-top: 0.75rem;
+       margin-bottom: 0.5rem;
+     }
+     .team:first-of-type h4 {
+       margin-top: 0.5rem;
      }
      p {
        margin-block-start: 0.0rem;
