--- a/templates/chart.html
+++ b/templates/chart.html
@@ -254,10 +254,13 @@
   <script src="/static/jquery-3.7.1.min.js"></script>
   <script>
    $(function() {
+     let popupWin;
      $('td.matchup').on('click', function(e) {
-       console.log("td click on: " + this.id);
+       if (popupWin && !popupWin.closed) {
+         popupWin.close();
+       }
        const specs = "popup,width=900,height=600,top=200,left=200";
-       window.open('/report/score_posting/' + this.id, "_blank", specs);
+       popupWin = window.open('/report/score_posting/' + this.id, "_blank", specs);
      });
    });
   </script>
