--- a/templates/popup.html
+++ b/templates/popup.html
@@ -109,9 +109,9 @@
       </section>
       {% endif %}
     </main>
-    <div class="actions">
+    <p class="actions">
       <button type="button" onclick="window.close();">Close window</button>
-    </div>
+    </p>
   </body>
 
 </html>
