--- a/templates/demo.html
+++ b/templates/demo.html
@@ -11,7 +11,7 @@
      }
      h2 {
        font-size: 1.125rem;
-       margin-bottom: 0.5rem;
+       margin: 0.5rem 0.0rem;
      }
      label:not(:first-child) {
        margin-left: 0.5rem;
